fixed the unaligned span by changing height from auto to 100%

--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -46,10 +46,9 @@
     font-size: 1.4rem;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;  
     justify-content: space-evenly;
     margin: 0 auto;
-
- 
 }
 
 .graph-image-card {
@@ -59,17 +58,18 @@
     margin: 0 auto;
     justify-content: space-around; 
     text-align: center;
+    width: 300px;  
+    height: 400px;  
 }
 
 .graph-image {
-    object-fit: fill;
+    object-fit: contain;  
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    width: 80%;
-    height: auto;
-
+    width: 100%;  
+    height: 100%;
 }
 
 .graph-title {
